# PRmanager

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/prm/: __init__.py  __main__.py  cli.py  config.py  db.py  github.py  repl.py
tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_db.py  test_github.py
