[project]
name = "prmanager"
version = "0.7.0"
description = "A command-line manager for GitHub pull requests, backed by local SQLite state."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Stephen B. Johnson" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
prm = "prm.cli:app"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
